@@ -38,6 +38,9 @@
 	* pygtk-gtkwindow.xml (gtk.window_set_auto_startup_notification)
 	Add description for this PyGTK 2.2 function.
 
+	* pygtk-gtkobject.xml (gtk.bindings_activate_event) Add.
+	(gtk.bindings_activate) Fix name.
+
 2004-04-22  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkpixbuf.xml
